--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="koadit"></div>
     <script></script>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
